[project]
name = "puzzle-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pylint>=4.0.4",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.10",
]

[tool.pylint."messages control"]
disable = [
    "fixme",
]